[gd_scene load_steps=4 format=3 uid="uid://cppsnb2hsoyhc"]

[ext_resource type="Script" path="res://scripts/game_over_hud.gd" id="1_ttmkv"]
[ext_resource type="Texture2D" uid="uid://16nxd5e78ve" path="res://textures/gameover.png" id="2_6knqq"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_m4e43"]
color = Color(1, 1, 1, 1)
grow_begin = 0.0
grow_end = 0.0
thickness = 0

[node name="GameOverHud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ttmkv")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(192, 0)
scale = Vector2(0.384, 0.412445)
texture = ExtResource("2_6knqq")
centered = false

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -124.0
offset_right = 176.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxLine_m4e43")

[node name="HighScore" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 32.0
offset_top = 72.0
offset_right = 328.0
offset_bottom = 122.0
theme_override_colors/font_color = Color(0.999996, 0.807706, 0.0313258, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 36
text = "High Score: 9999
"

[node name="Score" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 80.0
offset_top = 120.0
offset_right = 288.0
offset_bottom = 176.0
theme_override_colors/font_color = Color(0.999996, 0.807706, 0.0313258, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 36
text = "Score: 9999"
justification_flags = 161

[node name="Retry" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 47.0
offset_top = 234.0
offset_right = 305.0
offset_bottom = 309.0
theme_override_colors/font_color = Color(0.999996, 0.807706, 0.0313258, 1)
theme_override_colors/font_hover_color = Color(1, 0.94127, 0.771931, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 48
text = "TRY AGAIN"
flat = true

[node name="BackToMenu" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 26.0
offset_top = 318.0
offset_right = 320.0
offset_bottom = 393.0
theme_override_colors/font_color = Color(0.999996, 0.807706, 0.0313258, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0.94127, 0.771931, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 48
text = "MAIN MENU"
flat = true

[connection signal="pressed" from="Panel/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="Panel/BackToMenu" to="." method="_on_back_to_menu_pressed"]
